<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WaitingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:gravity="center"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_marginVertical="14dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waiting"
                    android:textSize="18sp"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:fontFamily="@font/nunintosans"/>
                <TextView
                    android:id="@+id/rid_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defid"
                    android:textSize="36sp"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:fontFamily="@font/nunintosans"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_marginVertical="36dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/btnPlay"
                    android:layout_marginVertical="36dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_marginHorizontal="8dp"
                    app:cardCornerRadius="10dp"
                    app:cardMaxElevation="0dp"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@color/colorGray">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="14dp">
                        <TextView
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_play"
                            android:textSize="14sp"
                            android:textColor="@color/colorBlack"
                            android:textStyle="normal"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_marginHorizontal="8dp"
                    app:cardCornerRadius="10dp"
                    app:cardMaxElevation="0dp"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@color/colorGray">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="14dp">
                        <TextView
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_cancel"
                            android:textSize="14sp"
                            android:textColor="@color/colorBlack"
                            android:textStyle="normal"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/btnExit"
                    android:layout_marginVertical="36dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_marginHorizontal="8dp"
                    app:cardCornerRadius="10dp"
                    app:cardMaxElevation="0dp"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@color/colorGray">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="14dp">
                        <TextView
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_exit"
                            android:textSize="14sp"
                            android:textColor="@color/colorBlack"
                            android:textStyle="normal"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </ScrollView>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>